--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -10,21 +10,25 @@
             </small>
           </a>
 
-          <small *ngIf="isContactIcon" (click)="onToggleContactInfoModal(true)" class="ml-2" type="button" data-toggle="modal" data-target="#contactModal">
+          <small (click)="onToggleContactInfoModal(true)" class="ml-2" type="button" data-toggle="modal" data-target="#contactModal">
             <i class="fas fa-address-card"></i>
             </small>
         </h5>
       </div>
       <div class="col-lg-5 text-right">
         <a [routerLink]="[ '/user/create-candidate' ]" *ngIf="isEdit" class="btn btn-outline-warning btn-sm mr-1" href="javascript:;" title="Edit"><i
-            class="fas fa-pencil-alt"></i> {{"dashboard.edit" | translate }}</a>
-        <span *ngIf="isResume">
+            class="fas fa-pencil-alt"></i></a>
+        <span *ngIf="isResume" class="mr-1">
           <a
           [class.disabled]="!selectedResume?.file"
           (click)="selectedResume?.file && onToggleResumeForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedResume?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
             <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate }}
           </a>
         </span>
+		<a class="btn btn-outline-blue btn-sm mr-1" href="javascript:;" title="Edit"><i
+            class="fas fa-file-alt" ></i> Cover Lettter </a>
+		<a (click)="onTabChange()" style="margin-top: .25rem;" class="btn btn-outline-green btn-sm mr-1" href="javascript:;" title="Edit"><i
+            class="fas fa-tasks" ></i> Matches </a>
         <span  *ngIf="isMail && jobInfo?.id">
           <a (click)="onToggleSendMail(true)"  class="btn btn-outline-orange btn-sm ml-1" href="javascript:;">
           <i class="fas fa-paper-plane"></i> Send Mail</a>
@@ -119,7 +123,7 @@
             </ng-container>
           </ng-template>
         </h6>
-        <h6 *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" class="mb-0 text-capitalize">{{userInfo?.current_employer}}</h6>
+        <!--<h6 *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" class="mb-0 text-capitalize">{{userInfo?.current_employer}}</h6>
         <ng-container *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(1)">
           <ng-container *ngIf="userInfo?.privacy_protection?.current_employer == true; else elseEmpTemplate">
             <h6 class="mb-0 text-capitalize">{{userInfo?.current_employer}}</h6>
@@ -129,7 +133,7 @@
               {{censorEmployer(userInfo?.current_employer)}}
             </h6>
           </ng-template>
-        </ng-container>
+        </ng-container>-->
 
       </div>
     </div>
