--- a/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
+++ b/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
@@ -11,8 +11,9 @@
     *ngIf="url"
     [url]="url"
     [googleCheckContentLoaded]="true"
-    (loaded)="resumeLoaded($event)"
-    [googleCheckInterval]="3000"
+    (loaded)="resumeLoaded($event,this)"
+    [googleCheckInterval]="300"
+    [googleMaxChecks]="5"
     viewer="google" style="width:100%;height:150vh;">
 </ngx-doc-viewer>
     </div>
