--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -27,7 +27,7 @@
 <!-- //Sub Header Section -->
 
 <!-- Nav Tab Section -->
-<section class="nav-tab">
+<section class="nav-tab" *ngIf="dashboardView">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
