--- a/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
+++ b/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
@@ -1,39 +1,74 @@
 <section class="my-5">
-  <div class="container">
-    <div class="row mt-3" *ngIf="userProfileInfo?.doc_resume?.length > 1">
-      <div class="col-lg-12">
-        <div class="custom-control custom-checkbox mr-sm-2">
-          <input [checked]="onCheck(userProfileInfo?.doc_resume, 'default')" (click)="onChooseDefaultResume({}, $event.target.checked, true)" type="checkbox" class="custom-control-input" id="chooseApplying">
-          <label class="custom-control-label h6" for="chooseApplying">{{"dashboard.iWillChooseWhileApplying" | translate}}</label>
-          </div>
-      </div>
-    </div>
-    <div class="row mt-5">
-      <div *ngFor="let item of userProfileInfo?.doc_resume; let i=index" class="col-lg-2 alert fade show">
-        <button (click)="onDeleteJobConfirm(item, i)" type="button" class="close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <!-- {{(userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file) | json}} -->
-        <a (click)="onToggleResumeForm(true, (userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file))" href="#" data-toggle="modal" data-target="#resumeModal">
-          <!-- <ngx-doc-viewer [url]="item?.meta?.doc_resume?.path + '/' + item?.meta?.doc_resume?.folder + '/' + item?.file" viewer="google" style="width:100%;height:50vh;"></ngx-doc-viewer> -->
-          <i class="far fa-file-alt h1"></i>
-          <p class="card-title mb-2">{{item?.title}}</p>
-        </a>
-
-        <div class="form-group form-check  mb-0">
-          <input (click)="onChooseDefaultResume(item, $event.target.checked)" [checked]="(item.default == 1 || item.default == '1')" type="checkbox" class="form-check-input" id="resumeCheck_{{i}}">
-          <label class="form-check-label" for="resumeCheck_{{i}}">{{"common.default" | translate}} </label>
-        </div>
-      </div>
-      <div class="col-lg-2 alert">
-        <label class="text-black-50">
-          <h1 class="text-black-50 mb-0"><i class="far fa-plus-square"></i></h1>
-          {{"common.addResume" | translate}}
-          <input #userResume type="file" hidden (change)="handleFileInput($event);">
-        </label>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row mt-3" >
+			<div class="col-lg-12">
+				<div class="pj-title mb-3">
+					<h6>{{"common.resume" | translate}} </h6>
+				</div>
+			</div>
+			<div class="col-lg-12"  *ngIf="userProfileInfo?.doc_resume?.length > 1" >
+				<div class="custom-control custom-checkbox mr-sm-2">
+					<input [checked]="onCheck(userProfileInfo?.doc_resume, 'default')" (click)="onChooseDefaultResume({}, $event.target.checked, true)" type="checkbox" class="custom-control-input" id="chooseApplying">
+					<label class="custom-control-label h6" for="chooseApplying">{{"dashboard.iWillChooseWhileApplying" | translate}}</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ">
+			<div *ngFor="let item of userProfileInfo?.doc_resume; let i=index" class="col-lg-2 alert fade show">
+				<button (click)="onDeleteJobConfirm(item, i)" type="button" class="close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<!-- {{(userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file) | json}} -->
+				<a (click)="onToggleResumeForm(true, (userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file))" href="#" data-toggle="modal" data-target="#resumeModal">
+					<!-- <ngx-doc-viewer [url]="item?.meta?.doc_resume?.path + '/' + item?.meta?.doc_resume?.folder + '/' + item?.file" viewer="google" style="width:100%;height:50vh;"></ngx-doc-viewer> -->
+					<i class="far fa-file-alt h1"></i>
+					<p class="card-title mb-2">{{item?.title}}</p>
+				</a>
+				<div class="form-group form-check  mb-0">
+					<input (click)="onChooseDefaultResume(item, $event.target.checked)" [checked]="(item.default == 1 || item.default == '1')" type="checkbox" class="form-check-input" id="resumeCheck_{{i}}">
+					<label class="form-check-label" for="resumeCheck_{{i}}">{{"common.default" | translate}} </label>
+				</div>
+			</div>
+			<div class="col-lg-2 alert">
+				<label class="text-black-50">
+					<h1 class="text-black-50 mb-0"><i class="far fa-plus-square"></i></h1>
+					{{"common.addResume" | translate}}
+					<input #userResume type="file" hidden (change)="handleFileInput($event,'resume');">
+				</label>
+			</div>
+		</div>
+		<div class="row mt-3" style="display:none;">
+			<div class="col-lg-12">
+				<div class="pj-title mb-3">
+					<h6>{{"common.coverLetter" | translate}} </h6>
+				</div>
+			</div>
+		</div>
+		<div class="row " style="display:none;">
+			<div *ngFor="let item of userProfileInfo?.doc_cover; let i=index" class="col-lg-2 alert fade show">
+				<button (click)="onDeleteCoverConfirm(item, i)" type="button" class="close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<!-- {{(userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file) | json}} -->
+				<a (click)="onToggleResumeForm(true, (userProfileInfo?.meta?.doc_cover?.path + '/' + userProfileInfo?.meta?.doc_cover?.folder + '/' + item?.file))" href="#" data-toggle="modal" data-target="#resumeModal">
+					<!-- <ngx-doc-viewer [url]="item?.meta?.doc_resume?.path + '/' + item?.meta?.doc_resume?.folder + '/' + item?.file" viewer="google" style="width:100%;height:50vh;"></ngx-doc-viewer> -->
+					<i class="far fa-file-alt h1"></i>
+					<p class="card-title mb-2">{{item?.title}}</p>
+				</a>
+				<div class="form-group form-check  mb-0" style="display:none;">
+					<input (click)="onChooseDefaultResume(item, $event.target.checked)" [checked]="(item.default == 1 || item.default == '1')" type="checkbox" class="form-check-input" id="resumeCheck_{{i}}">
+					<label class="form-check-label" for="resumeCheck_{{i}}">{{"common.default" | translate}} </label>
+				</div>
+			</div>
+			<div class="col-lg-2 alert">
+				<label class="text-black-50">
+					<h1 class="text-black-50 mb-0"><i class="far fa-plus-square"></i></h1>
+					{{"common.addCover" | translate}}
+					<input #userCover type="file" hidden (change)="handleFileInput($event,'cover');">
+				</label>
+			</div>
+		</div>
+	</div>
 </section>
 
 <app-resume-modal
@@ -66,6 +101,29 @@
 
 </ng-template>
 
+<ng-template #coverTitleModal let-modal>
+  <form method="post" (ngSubmit)="onSaveCover()" #coverNgForm="ngForm" [formGroup]="coverForm">
+    <div class="modal-header">
+      <h5 class="modal-title">Add Cover Tilte</h5>
+      <button type="button" (click)="mbRef?.close()" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      </div>
+      <div class="modal-body">
+      <div class=" form-group">
+        <label class="h5">Cover Title</label>
+        <input formControlName="title" type="text" class="form-control" placeholder="Enter Resume Title">
+        <app-control-messages [control]="f['title']"></app-control-messages>
+      </div>
+      </div>
+      <div class="modal-footer">
+      <button type="button" (click)="mbRef?.close()" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      <button [disabled]="!coverForm.valid" type="button" (click)="onSaveCover()" class="btn btn-theme-blue " data-dismiss="modal">Save</button>
+      </div>
+  </form>
+
+</ng-template>
+
 
 <app-delete-modal
 *ngIf="isDeleteModalOpened"
@@ -73,5 +131,14 @@
 [showRecordName]="currentResumeDetails?.title"
 (onTriggerDeleteAction)="onDeleteJobConfirmed($event)"
 [toggleDeleteModal]="isDeleteModalOpened">
+
+</app-delete-modal>
+
+<app-delete-modal
+*ngIf="isDeleteModalOpenedCover"
+[typeOfModel]="'Cover'"
+[showRecordName]="currentCoverDetails?.title"
+(onTriggerDeleteAction)="onDeleteCoverConfirmed($event)"
+[toggleDeleteModal]="isDeleteModalOpenedCover">
 
 </app-delete-modal>
