--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -10,7 +10,7 @@
             </small>
           </a>
 
-          <small (click)="onToggleContactInfoModal(true)" class="ml-2" type="button" data-toggle="modal" data-target="#contactModal">
+          <small *ngIf="isContactIcon" (click)="onToggleContactInfoModal(true)" class="ml-2" type="button" data-toggle="modal" data-target="#contactModal">
             <i class="fas fa-address-card"></i>
             </small>
         </h5>
