--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -34,7 +34,7 @@
       <div class="col-lg-2 col-md-4 d-flex justify-content-center align-items-center">
         <button type="button" class="btn btn-outline-danger"
           style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
-        <button *ngIf="last" (click)="onDuplicate()" type="button" class="btn btn-outline-green ml-2"
+        <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
           style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
       </div>
     </ng-container>
