--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -133,10 +133,10 @@
 			</div>
 		  </div>
 		</div>
-		<div class="col-lg-4 col-md-6">
+		<div class="col-lg-4 col-md-6" *ngIf="childForm?.value?.personalDetails?.work_authorization == '0'">
 			<div class=" form-group">
 				<label>{{"postYourResume.visatype" | translate }}</label>
-				<ng-select appMarkAsterisk id="visa_type" [addTag]="true" addTagText="Add prevoiusemployers " bindValue="label" bindLabel="label" placeholder="Ex. H1B, H2B" appendTo="body" multiple="true" formControlName="visa_type">
+				<ng-select id="visa_type" [addTag]="true" addTagText="Add prevoiusemployers " bindValue="label" bindLabel="label" placeholder="Ex. H1B, H2B" appendTo="body" multiple="true" formControlName="visa_type">
 				</ng-select>
 				<app-control-messages [control]="f['visa_type']"></app-control-messages>	
 			</div>
@@ -359,7 +359,7 @@
 	<div class="row mt-5">
 		<div class="col-lg-12 col-md-6">
 		  <label>{{"postYourResume.addreference" | translate }}</label>
-		  <div ></div>
+		  <div appMarkAsterisk></div>
 		</div>
 	  </div> 	
 		<div class="row mt-2" *ngFor="let ticket of r.controls; let i = index; let last = last">
