--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -51,7 +51,7 @@
         <div class="col-lg-2 col-md-4">
           <button type="button" class="btn btn-outline-danger"
             style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
-          <button *ngIf="last" (click)="onDuplicate()" type="button" class="btn btn-outline-green ml-2"
+          <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
             style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
         </div>
       </ng-container>
@@ -65,8 +65,11 @@
         class="text-capitalize"
         [placeholder]="'Select Skills'"
         [multiple]="true"
+		
+         (select)="onSelectSkillsEvent($event)"
+         (remove)="onRemoveSkillEvent($event)"
         appMarkAsterisk
-        [items]="skillItems"
+        [items]="skillsItems"
         formControlName="skills"
         optionValueField="id"
         optionTextField="tag"
