--- a/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
+++ b/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
@@ -37,20 +37,20 @@
 				</label>
 			</div>
 		</div>
-		<div class="row mt-3" style="display:none;">
+		<div class="row mt-3" >
 			<div class="col-lg-12">
 				<div class="pj-title mb-3">
 					<h6>{{"common.coverLetter" | translate}} </h6>
 				</div>
 			</div>
 		</div>
-		<div class="row " style="display:none;">
+		<div class="row">
 			<div *ngFor="let item of userProfileInfo?.doc_cover; let i=index" class="col-lg-2 alert fade show">
 				<button (click)="onDeleteCoverConfirm(item, i)" type="button" class="close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 				<!-- {{(userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file) | json}} -->
-				<a (click)="onToggleResumeForm(true, (userProfileInfo?.meta?.doc_cover?.path + '/' + userProfileInfo?.meta?.doc_cover?.folder + '/' + item?.file))" href="#" data-toggle="modal" data-target="#resumeModal">
+				<a (click)="onToggleCoverForm(true, (userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file))" href="#" data-toggle="modal" data-target="#coverModal">
 					<!-- <ngx-doc-viewer [url]="item?.meta?.doc_resume?.path + '/' + item?.meta?.doc_resume?.folder + '/' + item?.file" viewer="google" style="width:100%;height:50vh;"></ngx-doc-viewer> -->
 					<i class="far fa-file-alt h1"></i>
 					<p class="card-title mb-2">{{item?.title}}</p>
@@ -60,7 +60,7 @@
 					<label class="form-check-label" for="resumeCheck_{{i}}">{{"common.default" | translate}} </label>
 				</div>
 			</div>
-			<div class="col-lg-2 alert">
+			<div class="col-lg-2 alert" *ngIf="userProfileInfo?.doc_cover==null || userProfileInfo?.doc_cover.length == 0 ">
 				<label class="text-black-50">
 					<h1 class="text-black-50 mb-0"><i class="far fa-plus-square"></i></h1>
 					{{"common.addCover" | translate}}
@@ -77,6 +77,13 @@
 [toggleResumeModal]="isOpenedResumeModal"
 (onEvent)="onToggleResumeForm($event)">
 </app-resume-modal>
+
+<app-cover-modal
+*ngIf="isOpenedCoverModal"
+[url]="selectedCoverUrl"
+[toggleCoverModal]="isOpenedCoverModal"
+(onEvent)="onToggleCoverForm($event)">
+</app-cover-modal>
 
 <ng-template #resumeTitleModal let-modal>
   <form method="post" (ngSubmit)="onSaveResume()" #resumeNgForm="ngForm" [formGroup]="resumeForm">
