Profile Form Changes and

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -76,7 +76,8 @@
     <div class="col-lg-4">
       <div class=" form-group">
         <label>{{"postYourResume.roleType" | translate }}</label>
-          <select appMarkAsterisk formControlName="employer_role_type" class="form-control text-capitalize">
+          <select formControlName="employer_role_type" class="form-control text-capitalize">
+              <option >Select Role Type</option>
               <option  value="Technical">Technical</option>
               <option  value="Functional">Functional</option>
               <option  value="Technofuncational">Technofuncational</option>
