--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -124,7 +124,7 @@
 <div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
-				<label>{{"postYourResume.selectcountry" | translate }} </label>
+				<label>Preferred Country</label>
 				<div class="pt-2">
 					<button type="button" class="btn btn-fltr" id="226" (click)="countryClick('United States',$event);">United States</button>
 					<button type="button" class="btn btn-fltr" id="225"  (click)="countryClick('United Kingdom',$event);">United Kingdom</button>
