--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -142,7 +142,7 @@
 			</div>
 		</div>	
 	  </div>
-	  <div class="row mt-2">
+	  <div class="row mt-2" *ngIf="childForm?.value?.personalDetails?.work_authorization == '0'" >
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.selectcountry" | translate }} </label>
@@ -161,7 +161,7 @@
 			</div>
 		</div>
 	</div>
-	  <div class="row mt-2">
+	  <div class="row mt-2" *ngIf="childForm?.value?.personalDetails?.work_authorization == '0'" >
 		<div class="col-lg-10 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.othercountry" | translate }} </label> 
@@ -359,7 +359,7 @@
 	<div class="row mt-5">
 		<div class="col-lg-12 col-md-6">
 		  <label>{{"postYourResume.addreference" | translate }}</label>
-		  <div appMarkAsterisk></div>
+		  <div></div>
 		</div>
 	  </div> 	
 		<div class="row mt-2" *ngFor="let ticket of r.controls; let i = index; let last = last">
