--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -325,15 +325,15 @@
 			
 		</div>
 		
-		<div class="row mt-3 info-box">	
+		<div class="row mt-3 info-box" *ngIf="childForm?.value?.personalDetails?.reference">	
 				
-			<div class="col-lg-12">
+			<div class="col-lg-12"  *ngIf="childForm?.value?.personalDetails?.reference?.length !=0">
 				<div class="pj-title mb-3 border-primary">
 					<h6 class="text-blue" role="button" (click)="show = !show"> Reference  <i class="fas fa-angle-down"></i></h6>
 				</div>
 				<div *ngIf="show" [@slideInOut] class="row mt-2" style="padding:0px;">
 					<div class="col-lg-4 p-1" *ngFor="let reference of childForm.value.personalDetails.reference " >
-						<div class="card job-card sm" style="min-height: 105px;">
+						<div class="card job-card sm" style="min-height: 105px;" *ngIf="reference.name && reference.email && reference.company_name">
 							<div class="card-body">
 								<p class="text-blue font-weight-bold mb-1">{{reference.name}}</p>
 								<p class="mb-1 hilight">{{reference.email}}</p>
